--- a/styles/styles.css
+++ b/styles/styles.css
@@ -161,7 +161,7 @@ button {
   font-style: normal;
   font-weight: 600;
   cursor: pointer;
-  color: var(--background-color);
+  color: #F7A7A6;
   background-color: var(--link-color);
   margin: 16px 0;
   white-space: nowrap;
